# Sanic-JWT-Extended

./: .gitignore  .pylintrc  Makefile  README.md  example.py  mypy.ini  playground.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml
docs/: Gemfile  Makefile  _config.yml  api.rst  basic_usage.rst  conf.py  config_options.md  error_handling.md  index.md  index.rst  installation.rst  make.bat  options.rst  rbac.rst  sanic_jwt_extended.decorators.rst  sanic_jwt_extended.exceptions.rst  sanic_jwt_extended.jwt_manager.rst  sanic_jwt_extended.rst  sanic_jwt_extended.tokens.rst  sanic_jwt_extended.utils.rst  user_claims.rst
docs/api_docs/: api_docs.md  decorators.md  exceptions.md  index.md  jwt.md  token.md
docs/usage/: access_control.md  basic.md  blacklist.md  freshness.md  index.md  private_claims.md  public_claims.md  refresh.md  usage.md
examples/: basic.py  blacklist.py  rbac.py  refresh.py  refresh_token.py  user_claims.py
sanic_jwt_extended/: __init__.py  blacklist.py  blacklist.pyi  blacklists.py  config.py  config.pyi  decorators.py  decorators.pyi  default_callbacks.py  exceptions.py  handler.py  handler.pyi  jwt_manager.py  jwt_manager.pyi  redis.py  tokens.py  tokens.pyi  utils.py  view_decorators.py
tests/: test_decorators.py  test_jwt_manager.py  test_token.py  utils.py
tests/test_decorators/: test_jwt_optional.py  test_jwt_required.py  test_refresh_jwt_required.py
