[tool.poetry]
name = "Sanic-JWT-Extended"
version = "0.4.3"
description = "Extended JWT integration with Sanic"
authors = [
    "Seonghyeon Kim <kim@seonghyeon.dev>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NovemberOscar/Sanic-JWT-Extended"
documentation = "https://sanic-jwt-extended.readthedocs.io/en/latest/"
keywords = ["sanic", "jwt", "json web token"]
classifiers=[
        "Environment :: Web Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[tool.poetry.dependencies]
python = "^3.6"
sanic = "^0.7.0"
PyJWT = "^1.6.4"

[tool.poetry.dev-dependencies]
isort = "^4.3.20"
black = "^19.3b0"
pylint = "^2.3.1"
pytest = "3.6.*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-redis = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"