[tool.poetry]
name = "Sanic-JWT-Extended"
version = "1.0-dev.10"
description = "Extended JWT integration with Sanic"
authors = [
    "Seonghyeon Kim <kim@seonghyeon.dev>"
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/NovemberOscar/Sanic-JWT-Extended"
documentation = "https://sanic-jwt-extended.readthedocs.io/en/latest/"
keywords = ["sanic", "jwt", "json web token"]
classifiers=[
        "Environment :: Web Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]

[tool.poetry.dependencies]
python = "^3.6"
sanic = ">= 18.12.0"
PyJWT = "^1.6.4"
dataclasses = { version = "*", python = "3.6.*" }
flatten-dict = "^0.2.0"
aioredis = "^1.3"

[tool.poetry.dev-dependencies]
isort = "^4.3.20"
black = "^19.3b0"
pylint = "^2.3.1"
pytest = "3.6.*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-redis = "*"
mypy = "^0.740.0"
pytest-sanic = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"